android cutoff fix 7

--- a/css/main.css
+++ b/css/main.css
@@ -80,8 +80,8 @@ title{
 }
 
 body{
-    width:100vw;                /*Head kullanmayıp, sadece body kullandığımız ve onu da 100 vw,vh ile ölçeklendirdiğimiz için hiçbir zaman scrollable olamayacak, nice*/
-    height:100vh;
+    width:100%;                /*Head kullanmayıp, sadece body kullandığımız ve onu da 100 vw,vh ile ölçeklendirdiğimiz için hiçbir zaman scrollable olamayacak, nice*/
+    height:100%;
 
     font-family: 'League Spartan', sans-serif;
 
