--- a/css/mobile_landing.css
+++ b/css/mobile_landing.css
@@ -72,5 +72,5 @@
 
 #android_cutoff_fixer{
     width: 100vw;
-    height: 20vmin;
+    height: 40vmin;
 }
